--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -156,7 +156,7 @@ body {
 	width: 100%;
 }
 	.header .inner {
-	    padding-top: 36px;
+	    padding-top: 12px;
 	    position: relative;
 	    min-height: 72px;
 	}
@@ -240,7 +240,7 @@ body {
 	}
 	.header .primary ul {
 		position:absolute;
-		top: 40px;
+		top: 44px;
 		bottom:0;
 		right:20px; /* positions the main navigation */
 	}
@@ -627,31 +627,27 @@ body h1 span.amp {
 	.tablet-nav .header .brand {
 		float: none;
 		display: inline-block;
-		margin-left: 22px;
-		margin-bottom: 22px;
+		margin-right: 100px;
+		margin-left: 12px;
 	}
-		.brand h1 {
-			padding-right: 100px; /* padding stops .brand text from overlapping the search and nav buttons */
-		}
+
 	.tablet-nav .header {
 		padding: 0px;
 	}
 		.tablet-nav .header .inner {
-			padding: 28px 0 0 0;
+			padding: 12px 0 0 0;
 			min-height: 0;
 		}
 		.tablet-nav .header .primary .nav-open-button { /* styling and positioning of the nav toggle button */
 			z-index: 100;
-			width: 20px;
-			height: 20px;
+			width: 36px;
+			height: 36px;
 			position: absolute;
 			right: 20px;
-			top: 35px;
+			top: 36px;
 			display: block;
 			cursor: pointer;
-			font-family: 'WebSymbolsRegular';
-			font-size: 20px;
-			background-color: #469EE6;
+			color: #AAA;
 		}
 		.tablet-nav .header .primary ul {
 			z-index: 10;
@@ -778,8 +774,8 @@ body h1 span.amp {
 	.content-inner {
 		padding-left: 12px;
 		padding-right: 12px;
-		padding-top: 56px;
-		padding-bottom: 56px;
+		padding-top: 24px;
+		padding-bottom: 24px;
 	}
 	.content-container,
 	.sidebar {
@@ -800,9 +796,7 @@ body h1 span.amp {
 	    font-size: 19px;
 	    line-height: 27px;
 	}
-	.main .inner {
-	    padding: 0 22px;
-	}
+
 	/* Secondry Nav */
 	.secondary li a {
 	    line-height: 24px;
