--- a/public/css/modal.css
+++ b/public/css/modal.css
@@ -3,7 +3,7 @@
 
 .modal-container {
     display: none;
-    z-index: 6;
+    z-index: 20;
     position: absolute;
     width: 100%;
     height: 100%;
@@ -23,26 +23,29 @@
     width: 400px;
     background-color: #fff;
     display: inline-block;
-    margin-top: 100px;
     text-align: center;
     padding: 24px;
     height: calc(100vh - 124px);
-    max-height: 320px;
+    max-height: 400px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 .modal-medium {
-    margin-top: 60px;
-    width: 600px;
+    width: 80%;
+    max-width: 600px;
     max-height: 600px;
 }
 .modal-large {
-    margin-top: 150px;
     width: 80%;
+    max-width: 500px;
     max-height: 600px;
 }
 .modal-inner {
-    overflow-y: hidden;
     display: inline-block;
     height: 100%;
+    overflow: auto;
 }
 .modal h2, .modal h4 {
     font-family: 'Sonder';
@@ -81,6 +84,11 @@
     cursor: pointer;
 }
 
+.modal-large form {
+    min-height: 400px;
+    position: relative;
+}
+
 @-webkit-keyframes animate {
     from {opacity:0} 
     to {opacity:1}
@@ -93,7 +101,6 @@
 @media only screen and (max-width: 720px) {
     .modal-inner {
         overflow-y: scroll;
-        height: 100%;
     }
 }
 
