--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -105,6 +105,7 @@
     background-repeat: no-repeat;
     font-size: 100px;
     overflow: hidden;
+    position: relative;
 }
 
 .banner-heading {
@@ -134,11 +135,14 @@
     width: 100%;
     z-index: 2;
     opacity: 0.5;
+    position: absolute;
+    top: 0;
 }
 
 .banner-promo {
     z-index: 1;
     position: relative;
+    top: 0;
 }
 
 .banner-heading h1 {
@@ -324,6 +328,9 @@
 
 .enquiry-inner {
     padding: 32px;
+    height: 236px;
+    text-align: center;
+    position: relative;
 }
 
 #map {
@@ -337,13 +344,18 @@
     width: 156px;
     font-size: 16px;
     letter-spacing: 2px;
-    margin: 0 auto;
     background-color: #A9F043;
     color: #fff;
+    display: inline-block;
     text-align: center;
     font-size: 20px;
     text-transform: uppercase;
     border-radius: 8px;
+    position: absolute;
+    bottom: 32px;
+    left: 0;
+    right: 0;
+    margin: auto
 }
 
 .enquiry-button:hover {
