--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -219,7 +219,6 @@
     border: none !important;
     padding: 0 !important;
     height: 60px;
-    line-height: 60px;
     font-size: 20px;
 }
 
@@ -245,7 +244,14 @@
     font-size: 30px;
     letter-spacing: 4px;
     margin-bottom: 24px;
+    display: inline-block;
     font-style: italic;
+}
+
+.member-content {
+    display: block;
+    max-width: 400px;
+    margin: 0 auto;
 }
 
 .member-table {
@@ -300,6 +306,11 @@
     color: #fff;
     margin: 0;
     margin-top: 8px;
+}
+
+.member-plan .material-icons {
+    color: #A9F043;
+    display: none;
 }
 
 /*=== Contact ===*/
@@ -430,8 +441,7 @@
     width: 56px;
     height: 56px;
     margin: 0 auto;
-    margin-top: 2px;
-    margin-bottom: 2px;
+    display: inline-block;
     background-position: center;
     background-size: 56px 56px !important;
 }
@@ -579,7 +589,22 @@
     }
 
     .member-plan {
-        width: 50%;
+        width: 100%;
+    }
+    .member-plan-inner {
+        padding-bottom: 40px;
+        border-bottom: 1px solid #ECECEC;
+    }
+    .member-content {
+        display: none;
+    }
+    .member-plan h2:hover,
+    .member-plan .material-icons:hover {
+        cursor: pointer;
+        color: #81CA2B;
+    }
+    .member-plan .material-icons {
+        display: inline-block;
     }
 }
 
@@ -631,15 +656,6 @@
 
     .times li {
         font-size: 14px;
-    }
-
-    .member-plan {
-        width: 100%;
-    }
-
-    .member-plan-inner {
-        padding-bottom: 40px;
-        border-bottom: 1px solid #ECECEC;
     }
 
     .subscribe fieldset {
